update dnsmasq::conf and dnsmasq.conf.erb file

--- a/files/dnsmasq.conf
+++ b/files/dnsmasq.conf
@@ -21,7 +21,7 @@
 # Never forward plain names (without a dot or domain part)
 domain-needed
 # Never forward addresses in the non-routed address spaces.
-# 不转发在不可路由地址空间(non-routed address spaces)中的地址
+# 不转发在非路由地址空间(non-routed address spaces)中的地址
 bogus-priv
 
 # Uncomment these to enable DNSSEC validation and caching:
