--- a/files/dnsmasq.conf
+++ b/files/dnsmasq.conf
@@ -11,7 +11,6 @@
 # leaving only DHCP and/or TFTP.
 #port=5353
 
-
 # The following two options make you a better netizen, since they
 # tell dnsmasq to filter out queries which the public DNS cannot
 # answer, and which load the servers (especially the root servers)
@@ -19,10 +18,9 @@
 # these requests from bringing up the link unnecessarily.
 
 # Never forward plain names (without a dot or domain part)
-domain-needed
+#domain-needed
 # Never forward addresses in the non-routed address spaces.
-# 不转发在非路由地址空间(non-routed address spaces)中的地址
-bogus-priv
+#bogus-priv
 
 # Uncomment these to enable DNSSEC validation and caching:
 # (Requires dnsmasq to be built with DNSSEC option.)
@@ -43,31 +41,26 @@ bogus-priv
 # so don't use it if you use eg Kerberos, SIP, XMMP or Google-talk.
 # This option only affects forwarding, SRV records originating for
 # dnsmasq (via srv-host= lines) are not suppressed by it.
-filterwin2k
+#filterwin2k
 
 # Change this line if you want dns to get its upstream servers from
 # somewhere other that /etc/resolv.conf
-# 指定 resolv-file 文件路径，默认/etc/resolv.conf
-resolv-file=/etc/resolv.dnsmasq
+#resolv-file=
 
 # By  default,  dnsmasq  will  send queries to any of the upstream
 # servers it knows about and tries to favour servers to are  known
 # to  be  up.  Uncommenting this forces dnsmasq to try each query
 # with  each  server  strictly  in  the  order  they   appear   in
 # /etc/resolv.conf
-# 严格按照resolv.conf中的顺序进行查找
-strict-order
+#strict-order
 
 # If you don't want dnsmasq to read /etc/resolv.conf or any other
 # file, getting its servers from this file instead (see below), then
 # uncomment this.
-# man --no-resolv: Don't read /etc/resolv.conf. Get upstream servers only from the command line or the dnsmasq configuration file.
-# 不读取 resolv-file 来确定上游服务器
 #no-resolv
 
 # If you don't want dnsmasq to poll /etc/resolv.conf or other resolv
 # files for changes and re-read them then uncomment this.
-# 不检测 /etc/resolv.conf 的变化
 #no-poll
 
 # Add other name servers here, with domain specs if they are for
@@ -76,11 +69,11 @@ strict-order
 
 # Example of routing PTR queries to nameservers: this will send all
 # address->name queries for 192.168.3/24 to nameserver 10.1.2.3
-server=/0.168.192.in-addr.arpa/192.168.0.2
+#server=/3.168.192.in-addr.arpa/10.1.2.3
 
 # Add local-only domains here, queries in these domains are answered
 # from /etc/hosts or DHCP only.
-local=/sansovo.org/
+#local=/localnet/
 
 # Add domains which you want to force to an IP address here.
 # The example below send any host in double-click.net to a local
@@ -112,12 +105,12 @@ local=/sansovo.org/
 # specified interfaces (and the loopback) give the name of the
 # interface (eg eth0) here.
 # Repeat the line for more than one interface.
-#interface=eth1
+#interface=
 # Or you can specify which interface _not_ to listen on
 #except-interface=
 # Or which to listen on by address (remember to include 127.0.0.1 if
 # you use this.)
-#listen-address=192.168.0.2,127.0.0.1
+#listen-address=
 # If you want dnsmasq to provide only DNS service on an interface,
 # configure it as shown above, and then use the following line to
 # disable DHCP and TFTP on it.
@@ -141,7 +134,7 @@ local=/sansovo.org/
 
 # Set this (and domain: see below) if you want to have a domain
 # automatically added to simple names in a hosts-file.
-expand-hosts
+#expand-hosts
 
 # Set the domain for dnsmasq. this is optional, but if it is set, it
 # does the following things.
@@ -150,7 +143,7 @@ expand-hosts
 # 2) Sets the "domain" DHCP option thereby potentially setting the
 #    domain of all systems configured by DHCP
 # 3) Provides the domain part for "expand-hosts"
-domain=sansovo.org
+#domain=thekelleys.org.uk
 
 # Set a different domain for a particular subnet
 #domain=wireless.thekelleys.org.uk,192.168.2.0/24
@@ -163,13 +156,13 @@ domain=sansovo.org
 # a lease time. If you have more than one network, you will need to
 # repeat this for each network on which you want to supply DHCP
 # service.
-dhcp-range=192.168.0.100,192.168.0.150,12h
+#dhcp-range=192.168.0.50,192.168.0.150,12h
 
 # This is an example of a DHCP range where the netmask is given. This
 # is needed for networks we reach the dnsmasq DHCP server via a relay
 # agent. If you don't know what a DHCP relay agent is, you probably
 # don't need to worry about this.
-#dhcp-range=192.168.0.100,192.168.0.150,255.255.255.0,12h
+#dhcp-range=192.168.0.50,192.168.0.150,255.255.255.0,12h
 
 # This is an example of a DHCP range which sets a tag, so that
 # some DHCP options may be set only for this network.
@@ -349,7 +342,7 @@ dhcp-range=192.168.0.100,192.168.0.150,12h
 #dhcp-option=3
 
 # Set the NTP time server addresses to 192.168.0.4 and 10.10.0.5
-#dhcp-option=option:ntp-server,192.168.0.2,10.10.0.5
+#dhcp-option=option:ntp-server,192.168.0.4,10.10.0.5
 
 # Send DHCPv6 option. Note [] around IPv6 addresses.
 #dhcp-option=option6:dns-server,[1234::77],[1234::88]
@@ -371,7 +364,7 @@ dhcp-range=192.168.0.100,192.168.0.150,12h
 
 # Set the NTP time server address to be the same machine as
 # is running dnsmasq
-dhcp-option=42,0.0.0.0
+#dhcp-option=42,0.0.0.0
 
 # Set the NIS domain name to "welly"
 #dhcp-option=40,welly
@@ -588,8 +581,7 @@ dhcp-option=42,0.0.0.0
 # have dnsmasq instead return the correct NXDOMAIN response, uncomment
 # this line. You can add similar lines to do the same for other
 # registries which have implemented wildcard A records.
-bogus-nxdomain=64.94.110.11
-bogus-nxdomain=3.223.115.185
+#bogus-nxdomain=64.94.110.11
 
 # If you want to fix up DNS results from upstream servers, use the
 # alias option. This only works for IPv4.
