dnsmasq:conf complete

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -39,6 +39,46 @@ dnsmasq::no_hosts: false
 dnsmasq::addn_hosts: ~
 dnsmasq::expand_hosts: false
 dnsmasq::domain: ~
-dnsmasq::domain_for_subnet: ~
-dnsmasq::domain_for_range: ~
 
+# dhcp config
+dnsmasq::dhcp_range: ~
+dnsmasq::dhcp_enable_ra: false
+dnsmasq::dhcp_host: ~
+dnsmasq::dhcp_ignore: ~
+dnsmasq::dhcp_vendorclass: ~
+dnsmasq::dhcp_userclass: ~
+dnsmasq::dhcp_mac: ~
+dnsmasq::read_ethers: false
+dnsmasq::dhcp_option: ~
+dnsmasq::dhcp_option_force: ~
+dnsmasq::dhcp_boot: ~
+dnsmasq::dhcp_match: ~
+dnsmasq::pxe_prompt: ~
+dnsmasq::pxe_service: ~
+dnsmasq::enable_tftp: ~
+dnsmasq::tftp_root: ~
+dnsmasq::tftp_no_fail: false
+dnsmasq::tftp_secure: false
+dnsmasq::tftp_no_blocksize: true
+dnsmasq::dhcp_lease_max: ~
+dnsmasq::dhcp_leasefile: ~
+dnsmasq::dhcp_authoritative: false
+dnsmasq::dhcp_rapid_commit: false
+dnsmasq::dhcp_script: ~
+dnsmasq::cache_size: ~
+dnsmasq::no_negcache: false
+dnsmasq::local_ttl: ~
+dnsmasq::bogus_nxdomain: ~
+dnsmasq::dns_alias: ~
+dnsmasq::mx_host: ~
+dnsmasq::mx_target: ~
+dnsmasq::localmx: false
+dnsmasq::selfmx: false
+dnsmasq::dns_srv_host: ~
+dnsmasq::ptr_record: ~
+dnsmasq::txt_record: ~
+dnsmasq::dns_cname: ~
+dnsmasq::log_queries: false
+dnsmasq::log_dhcp: false
+dnsmasq::dhcp_name_match: ~
+dnsmasq::dhcp_ignore_names: ~
