--- a/files/dnsmasq.conf
+++ b/files/dnsmasq.conf
@@ -181,7 +181,7 @@
 #dhcp-range=192.168.0.0,static
 
 # Enable DHCPv6. Note that the prefix-length does not need to be specified
-# and defaults to 64 if missing/
+# and defaults to 64 if missing.
 #dhcp-range=1234::2, 1234::500, 64, 12h
 
 # Do Router Advertisements, BUT NOT DHCP for this subnet.
